--- a/index.html
+++ b/index.html
@@ -8,6 +8,36 @@
     <script defer src="script.js"></script>
 </head>
 <body>
+    <div class="container">
+        <div class="display"></div>
+
+        <div class="number btn">7</div>
+        <div class="number btn">8</div>
+        <div class="number btn">9</div>
+
+        <div class="operator btn">+</div>
+
+        <div class="number btn">4</div>
+        <div class="number btn">5</div>
+        <div class="number btn">6</div>
+
+        <div class="operator btn">-</div>
+
+        <div class="number btn">1</div>
+        <div class="number btn">2</div>
+        <div class="number btn">3</div>
+
+        <div class="operator btn">*</div>
+
+        <div class="equals btn">=</div>
+
+        <div class="clear btn">AC</div>
+
+        <div class="operator btn">/</div>
+
+
+
+    </div>
     
 </body>
 </html>
