--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="display"></div>
+        <div class="display">123567804</div>
 
         <div class="number btn">7</div>
         <div class="number btn">8</div>
