Add number '0' cause i forgot it

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 
         <div class="equals btn">=</div>
 
+        <div class="number btn">0</div>
+
         <div class="clear btn">AC</div>
 
         <div class="operator btn">/</div>
