Add new decimal and percent buttons

--- a/index.html
+++ b/index.html
@@ -29,14 +29,19 @@
 
         <div class="operator btn">*</div>
 
-        <div class="equals btn">=</div>
+        <div class="clear btn">AC</div>
 
         <div class="number btn">0</div>
 
-        <div class="clear btn">AC</div>
+        <div class="decimal btn">.</div>
 
         <div class="operator btn">/</div>
 
+        <div class="percent btn">%</div>
+
+        <div class="negative btn">-/+</div>
+
+        <div class="equals btn">=</div>
 
 
     </div>
