Add backspace button and rearrange all buttons

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <div class="container">
         <div class="display">123567804</div>
 
+
+        <div class="negative btn">-/+</div>
+        
+        <div class="percent btn">%</div>
+
+        <div class="backspace btn">⌫</div>
+
         <div class="number btn">7</div>
         <div class="number btn">8</div>
         <div class="number btn">9</div>
@@ -31,17 +38,15 @@
 
         <div class="clear btn">AC</div>
 
-        <div class="number btn">0</div>
+        <div class="number btn zero">0</div>
 
         <div class="decimal btn">.</div>
 
-        <div class="operator btn">/</div>
-
-        <div class="percent btn">%</div>
-
-        <div class="negative btn">-/+</div>
+        <div class="operator btn divide">/</div>
 
         <div class="equals btn">=</div>
+
+
 
 
     </div>
