--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="display">123567804</div>
+        <div class="display">Enable Javascript</div>
 
 
         <div class="negative btn">-/+</div>
