Add keybindings section on screen

--- a/index.html
+++ b/index.html
@@ -10,45 +10,41 @@
 <body>
     <div class="container">
         <div class="display">Enable Javascript</div>
-
-
         <div class="negative btn">-/+</div>
-        
         <div class="percent btn">%</div>
-
         <div class="backspace btn">⌫</div>
-
         <div class="number btn">7</div>
         <div class="number btn">8</div>
         <div class="number btn">9</div>
-
         <div class="operator btn">+</div>
-
         <div class="number btn">4</div>
         <div class="number btn">5</div>
         <div class="number btn">6</div>
-
         <div class="operator btn">-</div>
-
         <div class="number btn">1</div>
         <div class="number btn">2</div>
         <div class="number btn">3</div>
-
         <div class="operator btn">*</div>
-
         <div class="clear btn">AC</div>
-
         <div class="number btn zero">0</div>
-
         <div class="decimal btn">.</div>
-
         <div class="operator btn divide">/</div>
-
         <div class="equals btn">=</div>
+    </div>
 
-
-
-
+    <div class="keybinds">
+        <ul>
+            <li><span>-/+</span> <p>Tab to toggle negative number</p></li>
+            <li><span>⌫</span> <p>Backspace to truncate current number</p></li>
+            <li><span>%</span> <p>Shift+5 to divide current number by 100</p></li>
+            <li><span>AC</span> <p>Escape to clear current number</p></li>
+            <li><span>=</span> <p>Enter to solve the equation</p></li>
+            <li><span>.</span> <p>Period to write a decimal number</p></li>
+            <li><span>+</span> <p>Shift+= to add</p></li>
+            <li><span>-</span> <p>- to subtract</p></li>
+            <li><span>*</span> <p>Shift+8 to multiply</p></li>
+            <li><span>/</span> <p>/ to divide</p></li>
+        </ul>
     </div>
     
 </body>
